--- a/Lesson03-CSS-Positioning/homework/homework.css
+++ b/Lesson03-CSS-Positioning/homework/homework.css
@@ -8,36 +8,59 @@ in this folder, you are in the wrong place.
 
 /* We will start this one off for you: */
 #exerciseOne {
-
+  display: block; 
+  text-align: center;
 }
 
 
 /* Exercise Two: Positioning a Header Bar*/
 
 /* Place code here */
-
+#exerciseTwo {
+  display: none;
+}
 
 
 /* Exercise Three: */
 
 /* Place code here */
-
+#exerciseThree {
+  top: 100px;
+  left: 200px;
+}
 
 
 /* Exercise Four: */
 
 /* Place code here */
-
+#exerciseFour {
+  position: fixed;
+}
 
 
 /* Exercise Five */
 
 /* Place code here */
-
+#exerciseFive {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
 
 
 /* Exercise Six */
 
 #exerciseSeven {
   display: flex;
+  justify-content: space-evenly;
+  flex-direction: column-reverse;
+}
+
+#itemOne {
+  align-self: flex-end;
+}
+
+#itemThree {
+  align-self: flex-end;
 }
